c4prj1_deck/grade.txt
Grading at Wed Jan  8 02:24:44 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘compare_hands’:
eval.c:218:1: error: ISO C forbids nested functions [-Werror=pedantic]
 unsigned * get_match_counts(deck_t * hand)
 ^
eval.c:249:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void copy_straight(card_t ** to, deck_t *from, size_t ind, suit_t fs, size_t count)
 ^
eval.c:275:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int find_straight(deck_t * hand, suit_t fs, hand_eval_t * ans) {
 ^
eval.c:305:1: error: ISO C forbids nested functions [-Werror=pedantic]
 hand_eval_t evaluate_hand(deck_t * hand) {
 ^
eval.c:371:1: error: expected declaration or statement at end of input
 }
 ^
eval.c:371:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
